Bug 41594 - -static-libstdc++ is not recognized as valid by the gcc driver.
Summary: -static-libstdc++ is not recognized as valid by the gcc driver.
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: driver (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks: 42818 41596
  Show dependency treegraph
 
Reported: 2009-10-05 19:37 UTC by IainS
Modified: 2010-04-07 10:44 UTC (History)
2 users (show)

See Also:
Host: *-*-*
Target: *-*-*
Build: *-*-*
Known to work:
Known to fail:
Last reconfirmed:


Attachments
recognize "-static-libstdc++" as a valid option (319 bytes, patch)
2009-10-05 19:39 UTC, IainS
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description IainS 2009-10-05 19:37:16 UTC
although the option is parsed by g++spec.c it is not accepted by gcc.
Comment 1 IainS 2009-10-05 19:39:49 UTC
Created attachment 18713 [details]
recognize "-static-libstdc++" as a valid option

log: 
       *gcc/gcc.c: Add -static-libstdc++ to list of recognized options.
Comment 2 Iain Sandoe 2010-04-07 10:40:21 UTC
Subject: Bug 41594

Author: iains
Date: Wed Apr  7 10:40:06 2010
New Revision: 158052

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=158052
Log:
2010-04-07  Iain Sandoe  <iains@gcc.gnu.org>

	PR driver/41594
	* gcc.c: Add -static-libstdc++ to list of recognized options.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/gcc.c

Comment 3 Iain Sandoe 2010-04-07 10:40:53 UTC
2010-04-07  Iain Sandoe  <iains@gcc.gnu.org>

        PR driver/41594
        * gcc.c: Add -static-libstdc++ to list of recognized options.


M    ChangeLog
M    gcc.c
Comment 4 Iain Sandoe 2010-04-07 10:44:13 UTC
sorry about the double message.. I know now ;)