re PR driver/41594 (-static-libstdc++ is not recognized as valid by the gcc driver.)

2010-04-07  Iain Sandoe  <iains@gcc.gnu.org>

	PR driver/41594
	* gcc.c: Add -static-libstdc++ to list of recognized options.

From-SVN: r158052