gcc/gcc.c
@@ -4558,12 +4558,14 @@ process_command (int argc, const char **argv)
 	  switches[n_switches].validated = 0;
 	  switches[n_switches].ordering = 0;
 	  /* These are always valid, since gcc.c itself understands the
-	     first four and gfortranspec.c understands -static-libgfortran.  */
+	     first four, gfortranspec.c understands -static-libgfortran
+	     and g++spec.c understands -static-libstdc++ */
 	  if (!strcmp (p, "save-temps")
 	      || !strcmp (p, "static-libgcc")
 	      || !strcmp (p, "shared-libgcc")
 	      || !strcmp (p, "pipe")
-	      || !strcmp (p, "static-libgfortran"))
+	      || !strcmp (p, "static-libgfortran")
+	      || !strcmp (p, "static-libstdc++"))
 	    switches[n_switches].validated = 1;
 	  else
 	    {
